--- a/projects/uptown-function/index.html
+++ b/projects/uptown-function/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>CSS Flags</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Uptown Funciton</title>
 </head>
 <body>
-    <h1>CSS Flags</h1>
+    
 
+
+    <script src="app.js"></script>
 </body>
 </html>
