--- a/projects/design-a-blog/index.html
+++ b/projects/design-a-blog/index.html
@@ -21,6 +21,7 @@
     <main>
         <article class="content">
             <h3>Article ONE</h3>
+            <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
             <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
                 illum definitiones no quo, maluisset concludaturque et eum, 
                 altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -29,7 +30,7 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
@@ -44,12 +45,13 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
         <article class="content">
             <h3>Article THREE</h3>
+            <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
             <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
                 illum definitiones no quo, maluisset concludaturque et eum, 
                 altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -58,12 +60,13 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
         <article class="content">
             <h3>Article FOUR</h3>
+            <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
             <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
                 illum definitiones no quo, maluisset concludaturque et eum, 
                 altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -72,12 +75,13 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
         <article class="content">
             <h3>Article FIVE</h3>
+            <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
             <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
                 illum definitiones no quo, maluisset concludaturque et eum, 
                 altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -86,12 +90,13 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
         <article class="content">
             <h3>Article SIX</h3>
+            <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
             <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
                 illum definitiones no quo, maluisset concludaturque et eum, 
                 altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -100,12 +105,13 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
         <article class="content">
             <h3>Article SEVEN</h3>
+            <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
             <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
                 illum definitiones no quo, maluisset concludaturque et eum, 
                 altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -114,12 +120,13 @@
             </p>
 
             <p class="date">
-                insert date: xx/xx/xx
+                Date Published: xx/xx/xx
             </p>
         </article>
 
         <article class="content">
         <h3>Article EIGHT</h3>
+        <img class="breakfast" src="breakfast.jpeg" alt="Breakfast">
         <p class="ipsum">Some text to enable scrolling.. Lorem ipsum dolor sit amet, 
             illum definitiones no quo, maluisset concludaturque et eum, 
             altera fabulas ut quo. Atqui causae gloriatur ius te, 
@@ -128,8 +135,8 @@
         </p>
 
         <p class="date">
-                insert date: xx/xx/xx
-            </p>
+            Date Published: xx/xx/xx
+        </p>
         </article>
     </main>
 
