--- a/projects/css-flags/flags.html
+++ b/projects/css-flags/flags.html
@@ -8,7 +8,32 @@
     <title>CSS Flags</title>
 </head>
 <body>
-    <h1>CSS Flags</h1>
+    <head>
+        <h1>CSS Flags</h1>
+    </head>
+
+    <main>
+        <article class="flag-1">
+            <h1>
+                Flag 1
+            </h1>
+        </article>
+        <article class="flag-2">
+            <h1>
+                Flag 2
+            </h1>
+        </article>
+        <article class="flag-3">
+            <h1>
+                Flag 3
+            </h1>
+        </article>
+        <article class="flag-4">
+            <h1>
+                Flag 4
+            </h1>
+        </article>
+    </main>
 
 </body>
 </html>
