--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Mario Pest Control</title>
 </head>
 <body>
-    
+    <form>
+        Value 1: <input type="number" id="value1">
+        Value 2: <input type="number" id="value2">
+        Operator: 
+        <select id="operator">
+            <option value="add">Add</option>
+            <option value="subtract">subtract</option>
+            <option value="multiply">multiply</option>
+            <option value="divide">divide</option>
+        </select>
+        <button type="button" onclick="calc()">calculate</button>
+    </form>
+
+    <script src="app.js"></script>
 </body>
 </html>
