--- a/projects/css-flags/flags.html
+++ b/projects/css-flags/flags.html
@@ -11,29 +11,22 @@
     <head>
         <h1>CSS Flags</h1>
     </head>
+    <h1>Greece Flag</h1>
+    <div id="greece">
+        <div class="flag">
+            <div class="stripes"></div>
+            <div class="stripes"></div>
+            <div class="stripes"></div>
+            <div class="stripes"></div>
+            <div class="stripes bottom"></div>
 
-    <main>
-        <article class="flag-1">
-            <h1>
-                Flag 1
-            </h1>
-        </article>
-        <article class="flag-2">
-            <h1>
-                Flag 2
-            </h1>
-        </article>
-        <article class="flag-3">
-            <h1>
-                Flag 3
-            </h1>
-        </article>
-        <article class="flag-4">
-            <h1>
-                Flag 4
-            </h1>
-        </article>
-    </main>
+            <div class="cross">
+                    <div class="horizontal"></div>
+                    <div class="vertical"></div>
+            </div>
+        </div>
+    </div>
+    
 
 </body>
 </html>
