--- a/projects/travelForm/index.html
+++ b/projects/travelForm/index.html
@@ -40,9 +40,7 @@
         <button>Submit Travel Form</button>
     </form>
 
-    <div id="finishedForm">
-
-    </div>
+    <div id="finishedForm"></div>
 
 
 
