--- a/projects/business-time/about.html
+++ b/projects/business-time/about.html
@@ -15,7 +15,7 @@
         <nav class="navBar" id="myNavBar">
             <a href="home.html">Home</a>
             <a href="about.html">About</a> 
-            <a href="coffee.html">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
             
         <article>
