--- a/projects/business-time/home.html
+++ b/projects/business-time/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Aclonica|Cinzel+Decorative|Permanent+Marker|Press+Start+2P" rel="stylesheet">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href=".css">
     <title>Gg Home</title>
 </head>
 
@@ -20,7 +20,7 @@
         <nav class="navBar" id="myNavBar">
             <a href="home.html">Home</a>
             <a href="about.html">About</a> 
-            <a href="coffee.html">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
 
         <article>
@@ -32,8 +32,7 @@
                 voluptas minima accusamus maiores modi eum <br>                    aperiam consectetur recusandae repellat <br>
                 exercitationem corporis ut officia dicta <br>
                 aliquid nam provident.<br>
-                
-               <img src="holding-controlers.jpg" alt="holding-controllers" class="pic">
+                <div class="picOne"></div>
             </div>
 
             <div class="articles">
