--- a/instruction/review/index.html
+++ b/instruction/review/index.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Todo-List</title>
 </head>
 <body>
-    
-    <script src="app.js"></script>
+    <header>
+        <h1 class="title">
+            Todo-List
+        </h1>
+    </header>
+    <form name="todo-form" class="inputs">
+        <input type="text" name="title" placeholder="Title">
+        <input type="number" name="price" placeholder="Cost">
+        <input type="text" name="imgURL" placeholder="Image URL">
+        <input type="text" name="description" placeholder="Description">
+        <button>Submit</button>
+    </form>
+
+
+    <div id="todolist-container">
+        
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
