--- a/instruction/todo-list-review/index.html
+++ b/instruction/todo-list-review/index.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
-    <title>Todo-List</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1 class="title">
-            Todo List
-        </h1>
-    </header>
 
     <form name="todo-form">
         <input type="text" name="title" placeholder="Title">
-        <input type="number" name="price" placeholder="Price">
-        <input type="text" name="imageUrl" placeholder="Image">
         <input type="text" name="description" placeholder="Description">
         <button>Submit</button>
     </form>
@@ -29,6 +22,6 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-    <script src="app.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
