--- a/instruction/css-grid-review/index.html
+++ b/instruction/css-grid-review/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>CSS-Grid Review</title>
+    <title>Document</title>
 </head>
 <body>
-    <div id="grid-container">
-        <!-- <div>1</div>
-        <div>2</div>
+
+    <!-- <div id="grid-container">
+        <div>
+            <h3>Zen title thing</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, natus voluptatibus quisquam, hic magni eum quos labore ab molestias aperiam officia possimus non. Odit corporis harum eos, eius error deserunt.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta fugiat eaque architecto distinctio, commodi provident veritatis ad odio eligendi ex id ipsum labore odit, deserunt ratione dolor animi aliquid sunt.
+            </p>
+        </div> -->
+        <!-- <div>2</div>
         <div>3</div>
         <div>4</div>
         <div>5</div>
@@ -19,14 +28,40 @@
         <div>8</div>
         <div>9</div>
         <div>10</div> -->
-        <div>
-            <h3>shalom</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus minus quod, nisi ipsa accusantium aut cupiditate! Impedit eum ad minus obcaecati sunt minima in, expedita voluptas earum aperiam consequatur iste.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste deserunt omnis sequi quia reiciendis quae impedit, blanditiis odio perferendis repellat perspiciatis laudantium ab sit totam culpa laborum eligendi eveniet porro.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, dolore praesentium. Similique alias, quasi optio corrupti beatae dicta magnam delectus amet nobis tempore recusandae fuga tenetur quod omnis, iste voluptates!</p>
-        </div>
+    <!-- </div> -->
+
+
+
+    <div id="zen-grid-container">
+        <header>
+           HEADER
+        </header>
+        <section>
+            <span class="vanish">Lorem</span> ipsum dolor sit amet consectetur adipisicing elit. Explicabo incidunt doloribus soluta minus quos sint, veritatis beatae vitae molestiae molestias voluptates nihil, deleniti tenetur nisi? Aliquid debitis ab quos neque.
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus molestiae voluptatibus natus. Maiores fuga et, quibusdam distinctio sed quisquam aut beatae, inventore officia architecto accusantium praesentium dolor nam neque quis!
+        </section>
+        <section>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt rerum est necessitatibus, facere autem ut nulla consectetur odit voluptatibus praesentium accusantium omnis nihil quam veritatis harum similique, exercitationem cum fugiat.
+        </section>
+        <footer>
+            <div class="link-container">
+                <a>I am a link</a>
+                <a>I am a link</a>
+                <a>I am a link</a>
+                <a>I am a link</a>
+            </div>
+            <div class="link-container">
+                <a>I am a link</a>
+                <a>I am a link</a>
+                <a>I am a link</a>
+                <a>I am a link</a>
+            </div>
+        </footer>
     </div>
 
+    
 
     <script src="app.js"></script>
 </body>
