--- a/projects/css-zengarden/index.html
+++ b/projects/css-zengarden/index.html
@@ -210,36 +210,48 @@
         </div>
         <footer>
             <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
+                <div>
+                    <p>MID CENTURY MODERN</p>
+                    <p>by Andrew Lohman</p>
+                </div>
+                <div>
+                    <p>GARMENTS</p>
+                    <p>by Dan Mall</p>
+                </div>
+                <div>
+                    <p>STEEL</p>
+                    <p>by Steffen Knoeller</p>
+                </div>
+                <div>
+                    <p>APOTHECARY</p>
+                    <p>by Trent Walton</p>
+                </div>
+                <div>
+                    <p>SCREEN FILLER</p>
+                    <p>by Elliot Jay Stocks</p>
+                </div>
+                <div>
+                    <p>Verde Moderna</p>
+                    <p>by Dave Shea</p>
+                </div>
             </div>
+
             <div>
-                <p>GARMENTS</p>
-                <p>by andrew lohman</p>
-            </div>
-            <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
-            </div>
-            <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
-            </div>
-            <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
-            </div>
-            <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
-            </div>
-            <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
-            </div>
-            <div>
-                <p>mid century modern</p>
-                <p>by andrew lohman</p>
+                <div>
+                    <p>VIEW THIS DESIGN'S CSS</p>
+                </div>
+                <div>
+                    <p>CSS RESOURCES</p>
+                </div>
+                <div>
+                    <p>FAQ</p>
+                </div>
+                <div>
+                    <p>SUBMIT A DESIGN</p>
+                </div>
+                <div>
+                    <p>TRANSLATIONS</p>
+                </div>
             </div>
         </footer>
     </div>
